Fix overflow issues, add work exp component

--- a/portfolio-ui/src/App.css
+++ b/portfolio-ui/src/App.css
@@ -3,7 +3,6 @@
 .app-container {
   display: flex;
   height: 100vh;
-  width: 100vw;
 
   background-color: var(--md-sys-color-surface-container-lowest);
 
@@ -20,27 +19,37 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 5vh;
+  gap: 2rem;
 
   background-color: var(--md-sys-color-surface-container);
   color: var(--md-sys-color-on-surface);
 }
 
-.nav-elem {
+.nav-item {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 0.75em;
-  gap: 0.5rem;
   font-weight: 500;
   font-variation-settings: "wdth" 10;
+  cursor: pointer;
+}
+
+.nav-item-icon {
+  padding: 0.4rem 0.75rem;
+  margin-bottom: 0.25rem;
+}
+
+.nav-item-icon:hover {
+  background-color: var(--md-sys-color-primary);
+  color: var(--md-sys-color-on-primary);
+  border-radius: var(--border-radius);
 }
 
 .nav-item-selected {
   background-color: var(--md-sys-color-primary);
   color: var(--md-sys-color-on-primary);
-  padding: 0.75rem;
   border-radius: var(--border-radius);
 }
 
@@ -57,8 +66,13 @@
   color: var(--md-sys-color-on-secondary-container);
 }
 
+.content {
+  margin: 0.75rem 0.75rem 0.75rem 6.25rem;
+}
+
 .home-content {
-  width: 100%;
+  /* width: 100%; */
+  height: 100%;
 
   display: flex;
   justify-content: center;
@@ -67,8 +81,6 @@
   text-align: center;
   gap: 2rem;
 
-  margin-left: 5.5rem;
-  margin: 0.75rem 0.75rem 0.75rem 6.35rem;
   border-radius: var(--border-radius);
 
   background-size: cover;
